[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Wednesdays-Wicked-Adventures"
version = "1.0.dev0"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "SQLAlchemy-Utils==0.42.1",
    "PyMySQL==1.1.2",
    "flask-login==0.6.3",
    "Flask-Admin==1.6.1",
    "WTForms==3.1.2",
    "Flask-WTF==1.2.2",
    "python-dotenv==1.2.1"
]